# djangocelery

./: .env  pyproject.toml  requirements.txt
apps/alpha/: apps.py  tasks.py
apps/review/: email.py  forms.py  tasks.py  urls.py  views.py
core/: celery.py  settings.py  urls.py
templates/review/: review.html  review_email.txt
